summaries/A_Run_All/errors.txt
❌ get_weather_data ERROR:
Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/get_weather_data.py", line 2, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'

---

❌ combine_pitcher_weather_park_away ERROR:
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 2
    from pathlib 
                 ^
SyntaxError: invalid syntax

---

